--- a/.github/workflows/make.yml
+++ b/.github/workflows/make.yml
@@ -17,7 +17,7 @@ jobs:
       run: |
         docker run \
         -v ${{ github.workspace }}:/root/workspace \
-        techdevangelist/miyoomini-buildroot:latest /bin/bash -c "cd /root/workspace && make -f Makefile.libretro platform=classic_armv7_a7"
+        techdevangelist/miyoomini-buildroot:latest /bin/bash -c "cd /root/workspace && make -f Makefile.libretro platform=classic_armv7_a7 && ls -lah /root/workspace"
 
     - name: Upload a Build Artifact
       uses: actions/upload-artifact@v3.0.0
