--- a/.github/workflows/make.yml
+++ b/.github/workflows/make.yml
@@ -17,12 +17,12 @@ jobs:
       run: |
         docker run \
         -v ${{ github.workspace }}:/root/workspace \
-        techdevangelist/miyoomini-buildroot:latest /bin/bash -c "cd /root/workspace && make -f Makefile.libretro platform=classic_armv7_a7 && ls -lah /root/workspace"
+        techdevangelist/miyoomini-buildroot:latest /bin/bash -c "cd /root/workspace && make -f Makefile.libretro platform=classic_armv7_a7 && ls -lah *.so"
 
     - name: Upload a Build Artifact
       uses: actions/upload-artifact@v3.0.0
       with:
-        name: gambatte_libretro.so# optional, default is artifact
+        name: gambatte_libretro.so
         path: gambatte_libretro.so
-        if-no-files-found: error # optional, default is warn
-        retention-days: 30 # optional
+        if-no-files-found: error
+        retention-days: 30
