--- a/.github/workflows/make.yml
+++ b/.github/workflows/make.yml
@@ -22,7 +22,7 @@ jobs:
     - name: Upload a Build Artifact
       uses: actions/upload-artifact@v3.0.0
       with:
-        name: gambatte_libretro.so
-        path: gambatte_libretro.so
+        name: pcsx_rearmed_libretro.so
+        path: pcsx_rearmed_libretro.so
         if-no-files-found: error
         retention-days: 30
