--- a/.github/workflows/docker-build.yml
+++ b/.github/workflows/docker-build.yml
@@ -14,7 +14,7 @@ jobs:
       run: |
         docker run \
         -v ${{ github.workspace }}:/root/workspace \
-        techdevangelist/miyoomini-buildroot:latest /bin/bash -c "cd /root/workspace && make -f Makefile.libretro platform=classic_armv7_a7 && ls -lah *.so && sha1sum *.so && sha256sum *.so"
+        techdevangelist/miyoomini-buildroot:latest /bin/bash -c "cd /root/workspace && make -f Makefile.libretro platform=classic_armv7_a7 && ls -lah *.so && echo \"SHA1: `sha1sum *.so`\" && echo \"SHA256: `sha256sum *.so`\""
 
     - name: Upload a Build Artifact
       uses: actions/upload-artifact@v3.0.0
