--- a/.github/workflows/docker-build.yml
+++ b/.github/workflows/docker-build.yml
@@ -14,12 +14,12 @@ jobs:
       run: |
         docker run \
         -v ${{ github.workspace }}:/root/workspace \
-        techdevangelist/miyoomini-buildroot:latest /bin/bash -c "cd /root/workspace && make -f Makefile.libretro platform=classic_armv7_a7 && echo -n \"Resulting file: \" && ls -lah *.so && echo -n \"SHA1: \" && sha1sum *.so && echo -n \"SHA256: \" && sha256sum *.so"
+        techdevangelist/miyoomini-buildroot:latest /bin/bash -c "cd /root/workspace && make -f Makefile.libretro platform=classic_armv7_a7 && echo -n \"Resulting file: \" && ls -lah gambatte_libretro.so && sha1sum gambatte_libretro.so > gambatte_libretro.so.sha1 && sha256sum gambatte_libretro.so > gambatte_libretro.so.sha256"
 
     - name: Upload a Build Artifact
       uses: actions/upload-artifact@v3.0.0
       with:
-        name: gambatte_libretro.so
-        path: gambatte_libretro.so
+        name: Gambatte core for LibRetro
+        path: gambatte_libretro.so*
         if-no-files-found: error
         retention-days: 30
