--- a/.github/workflows/docker-build.yml
+++ b/.github/workflows/docker-build.yml
@@ -10,7 +10,7 @@ jobs:
 
     steps:
     - uses: actions/checkout@v3
-    - name: Build the repo in debian buildroot
+    - name: Checkout & build the repo in debian buildroot
       run: |
         docker run \
         -v ${{ github.workspace }}:/root/workspace \
@@ -19,7 +19,7 @@ jobs:
     - name: Upload a Build Artifact
       uses: actions/upload-artifact@v3.0.0
       with:
-        name: Gambatte core for LibRetro
+        name: gambatte_libretro.so
         path: gambatte_libretro.so*
         if-no-files-found: error
         retention-days: 30
