--- a/.github/workflows/docker-build.yml
+++ b/.github/workflows/docker-build.yml
@@ -10,13 +10,13 @@ jobs:
 
     steps:
     - uses: actions/checkout@v3
-    - name: Checkout & build the repo in debian buildroot
+    - name: Checkout & build the repo in buildroot
       run: |
         docker run \
         -v ${{ github.workspace }}:/root/workspace \
-        techdevangelist/miyoomini-buildroot:latest /bin/bash -c "cd /root/workspace && echo "none" && echo -n \"Resulting file: \" && ls -lah gambatte_libretro.so && sha1sum gambatte_libretro.so > gambatte_libretro.so.sha1 && sha256sum gambatte_libretro.so > gambatte_libretro.so.sha256"
+        techdevangelist/miyoomini-buildroot:latest /bin/bash -c "cd /root/workspace && make -f Makefile.libretro platform=classic_armv7_a7 && echo -n \"Resulting file: \" && ls -lah gambatte_libretro.so && sha1sum gambatte_libretro.so > gambatte_libretro.so.sha1 && sha256sum gambatte_libretro.so > gambatte_libretro.so.sha256"
 
-    - name: Upload a Build Artifact
+    - name: Upload the build artifact
       uses: actions/upload-artifact@v3.0.0
       with:
         name: gambatte_libretro.so
